--- a/GitHub/workflows/lint.yaml
+++ b/GitHub/workflows/lint.yaml
@@ -15,6 +15,6 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
-      - run: npm install
+          node-version: 23.x
+      - run: npm ci
       - run: npm run lint
