--- a/.GitHub/workflows/lint.yaml
+++ b/.GitHub/workflows/lint.yaml
@@ -20,7 +20,7 @@ jobs:
           node-version: 23.x
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i
 
       - name: Run ESLint
         run: npm lint
