--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@antfu/eslint-config": "^5.2.1",
     "@nuxt/eslint": "^1.8.0",
     "@nuxt/icon": "^2.0.0",
+    "@nuxtjs/color-mode": "^3.5.2",
     "@tailwindcss/vite": "^4.1.11",
     "daisyui": "^5.0.50",
     "eslint-plugin-format": "^1.0.1",
