--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "nuxt": "^4.0.3",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.2.22",
