--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "concurrently \"npm run dev:db\" \"nuxt dev\"",
+    "dev:db": "turso dev --db-file local.db",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -14,11 +15,13 @@
   },
   "dependencies": {
     "@antfu/eslint-config": "^5.2.1",
+    "@libsql/client": "^0.15.10",
     "@nuxt/eslint": "^1.8.0",
     "@nuxt/icon": "^2.0.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@tailwindcss/vite": "^4.1.11",
     "daisyui": "^5.0.50",
+    "drizzle-orm": "^0.44.4",
     "eslint-plugin-format": "^1.0.1",
     "nuxt": "^4.0.3",
     "tailwindcss": "^4.1.11",
@@ -29,6 +32,7 @@
   "devDependencies": {
     "@iconify-json/tabler": "^1.2.22",
     "@nuxt/eslint-config": "^1.8.0",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.33.0",
     "eslint-plugin-tailwindcss": "^4.0.0-beta.0",
     "eslint-plugin-vue": "^10.4.0",
