--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxt/icon": "^2.0.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "@tailwindcss/vite": "^4.1.11",
+    "better-auth": "^1.3.6",
     "daisyui": "^5.0.50",
     "drizzle-orm": "^0.44.4",
     "eslint-plugin-format": "^1.0.1",
