--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "concurrently \"npm run dev:db\" \"nuxt dev\"",
+    "dev": "nuxt dev",
     "dev:db": "turso dev --db-file local.db",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -19,12 +19,14 @@
     "@nuxt/eslint": "^1.8.0",
     "@nuxt/icon": "^2.0.0",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.11",
     "better-auth": "^1.3.6",
     "daisyui": "^5.0.50",
     "drizzle-orm": "^0.44.4",
     "eslint-plugin-format": "^1.0.1",
     "nuxt": "^4.0.3",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
