--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@nuxtjs/color-mode": "^3.5.2",
     "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.11",
+    "@vueuse/nuxt": "^13.7.0",
     "better-auth": "^1.3.6",
+    "clsx": "^2.1.1",
     "daisyui": "^5.0.50",
     "drizzle-orm": "^0.44.4",
     "eslint-plugin-format": "^1.0.1",
+    "motion-v": "^1.7.0",
     "nuxt": "^4.0.3",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.11",
