--- a/package.json
+++ b/package.json
@@ -21,24 +21,28 @@
     "@nuxtjs/color-mode": "^3.5.2",
     "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.11",
+    "@vee-validate/nuxt": "^4.15.1",
+    "@vee-validate/zod": "^4.15.1",
     "@vueuse/nuxt": "^13.7.0",
     "better-auth": "^1.3.6",
     "clsx": "^2.1.1",
     "daisyui": "^5.0.50",
-    "drizzle-orm": "^0.44.4",
+    "drizzle-zod": "^0.8.3",
     "eslint-plugin-format": "^1.0.1",
     "motion-v": "^1.7.0",
     "nuxt": "^4.0.3",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.11",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
-    "zod": "^4.0.17"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.2.22",
     "@nuxt/eslint-config": "^1.8.0",
     "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.5",
     "eslint": "^9.33.0",
     "eslint-plugin-tailwindcss": "^4.0.0-beta.0",
     "eslint-plugin-vue": "^10.4.0",
