--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,5 +61,5 @@
     "vue",
     "rails"
   ],
-  "workbench.colorTheme": "Winter is Coming (Dark Black - No Italics)"
+  "workbench.colorTheme": "Calm Days, Sober Nights - Day"
 }
