updated form field logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,5 +61,5 @@
     "vue",
     "rails"
   ],
-  "workbench.colorTheme": "Calm Days, Sober Nights - Day"
+  "workbench.colorTheme": "Winter is Coming (Dark Blue - No Italics)"
 }
