--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "drizzle-zod": "^0.8.3",
     "eslint-plugin-format": "^1.0.1",
     "motion-v": "^1.7.0",
+    "nanoid": "^5.1.5",
     "nuxt": "^4.0.3",
     "nuxt-csurf": "^1.6.5",
     "pinia": "^3.0.3",
+    "slug": "^11.0.0",
     "tailwindcss": "^4.1.11",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.18",
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@iconify-json/tabler": "^1.2.22",
     "@nuxt/eslint-config": "^1.8.0",
+    "@types/slug": "^5.0.9",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
     "eslint": "^9.33.0",
