refractored code from location.post to queries folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,5 +61,5 @@
     "vue",
     "rails"
   ],
-  "workbench.colorTheme": "Monokai Pro Light (Filter Sun)"
+  "workbench.colorTheme": "poimandres-storm"
 }
