--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,5 +62,5 @@
     "rails"
   ],
 
-  "workbench.colorTheme": "Nord Light"
+  "workbench.colorTheme": "Winter is Coming (Dark Black - No Italics)"
 }
