done it again: location are showed in sidebar + pending state + refresh

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,5 +62,5 @@
     "rails"
   ],
 
-  "workbench.colorTheme": "Winter is Coming (Dark Black - No Italics)"
+  "workbench.colorTheme": "Monokai Pro Light (Filter Sun)"
 }
