refractored code: created store for map and links + hydration guard

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,5 +61,5 @@
     "vue",
     "rails"
   ],
-  "workbench.colorTheme": "Tokyo Night Light"
+  "workbench.colorTheme": "Monokai Pro Light (Filter Sun)"
 }
