added flyto method for 1 point to have less zoom

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,5 +61,5 @@
     "vue",
     "rails"
   ],
-  "workbench.colorTheme": "Monokai Pro (Filter Octagon)"
+  "workbench.colorTheme": "poimandres-storm"
 }
