--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,5 +61,5 @@
     "vue",
     "rails"
   ],
-  "workbench.colorTheme": "poimandres"
+  "workbench.colorTheme": "Monokai Pro (Filter Octagon)"
 }
