--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "daisyui": "^5.0.50",
     "drizzle-zod": "^0.8.3",
     "eslint-plugin-format": "^1.0.1",
+    "maplibre-gl": "^5.7.3",
     "motion-v": "^1.7.0",
     "nanoid": "^5.1.5",
     "nuxt": "^4.0.3",
