--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,6 @@
     "vue",
     "rails"
   ],
-  "workbench.colorTheme": "GitHub Dark High Contrast"
+  "workbench.colorTheme": "Palenight Italic"
 
 }
